# fpmi-caos

./: 2018-2019.md  2019-2020-informatics.md  2019-2020-physics.md  2019-2020.md  2020-2021-informatics.md  2020-2021-os-course.md  2020-2021.md  2021-2022-full-year-course.md  2021-2022-half-year-course.md  2021-2022.md  2022-2023-full-year-course.md  2022-2023.md  README.md  SUMMARY.md  ami_79x.md
en-mipt/: Exam-Fall.md  README.md
en-mipt/admin-basics/: README.md
en-mipt/arm/: arm.md
en-mipt/dev-tools/: README.md  dev-tools.md  my-first-program.c
en-mipt/fds/: README.md
en-mipt/linux-basics/: linux-intro.md
en-mipt/numbers/: README.md
en-mipt/syscalls/: README.md
harbour/: README.md
harbour/arm/: arm.md
harbour/asm-x86/: README.md
harbour/files/: README.md
harbour/ieee754/: README.md
harbour/ints/: README.md
harbour/libs/: README.md
harbour/memory-addressing/: README.md
harbour/mmap/: README.md
harbour/openssl/: README.md
harbour/pipes/: README.md
harbour/signals/: README.md
harbour/slides/: 02_Data representation.pptx
harbour/sockets/: README.md
harbour/time/: README.md
lectures/fall-2018/: Lection07-supplementary-01.c
lessons-supplementary/2021-2022/l23-grpc/: CMakeLists.txt  social_network.proto
lessons-supplementary/2021-2022/l23-grpc/cplusplus/: profile_server_main.cpp  profile_service.cpp  profile_service.h
lessons-supplementary/2021-2022/l23-grpc/dart/: README.md  pubspec.yaml
lessons-supplementary/2021-2022/l23-grpc/dart/lib/: main.dart
lessons-supplementary/2021-2022/l23-grpc/dart/lib/src/: main_screen.dart
lessons-supplementary/2021-2022/l23-grpc/dart/web/: index.html
lessons-supplementary/2021-2022/l23-grpc/go/: chat_server_main.go  chat_service.go  go.mod
lessons-supplementary/2021-2022/l23-grpc/python/: main.py  social_network_pb2.py  social_network_pb2_grpc.py
practice/: .clang-format  README.md  codestyle.md
projects/: README.md  assembler_macroces.md  compiler.md  httpd.md  proxy.md  shell.tex  task_doom.tex
(+118 files in other folders)
